_sass/my-style.scss
@font-face {
  font-family: 'KerisKeduLine';
  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/2601-3@1.0/KERISKEDU_Line.woff2') format('woff2');
  font-weight: normal;
  font-display: swap;
}

@font-face {
  font-family: 'GangwonEducationModuche';
  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/GangwonEdu_OTFLightA.woff') format('woff');
  font-weight: 300;
  font-display: swap;
}

@font-face {
  font-family: 'GangwonEducationModuche';
  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/GangwonEdu_OTFBoldA.woff') format('woff');
  font-weight: 700;
  font-display: swap;
}

body {
  background-image: url('/assets/img/backgroundimage1.jpg');
  background-size: cover;
  background-attachment: fixed;
  background-position: center;
}


hy-push-state {
  background-color: rgba(255, 255, 255, 0.85) !important;
}

@media (prefers-color-scheme: dark) {
  hy-push-state {
    background-color: rgba(25, 30, 40, 0.85) !important;
  }
}

.dark-mode hy-push-state {
  background-color: rgba(25, 30, 40, 0.85) !important;
}

.light-mode hy-push-state {
  background-color: rgba(255, 255, 255, 0.85) !important;
}

.dl-table {
  a {
    @supports ((text-decoration-thickness: initial) and (text-underline-offset: initial)) {
      text-underline-offset: .8rem;
    }
    @supports not ((text-decoration-thickness: initial) and (text-underline-offset: initial)) {
      padding-bottom: .45rem;
    }
  }

  .btn, .gumroad-button  {
    margin: 1rem 0;
  }
}

